# flan-t5-text-classifier

./: .gitignore  README.md  classify.py  classify_and_evaluate.py  data_loader.py  flan-t5-finetuning.py  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
classifier/: classify_and_evaluate.py  data_loader.py  flan-t5-finetuning.py
classifier/AutoModelForSeq2SeqLM/: classify_and_evaluate.py
classifier/AutoModelForSequenceClassification/: classify_and_evaluate.py  flan-t5-finetuning.py
flan-t5-large-ecommerce-text-classification/logs/: events.out.tfevents.1698158809.Petrs-MacBook-Pro.local
