[tool.poetry]
name = "flan-t5-text-classifier"
version = "0.0.0"
description = "Flan t5 model for a text classification."
authors = ["Petr Vanek"]
readme = "README.md"
repository = "https://github.com/VanekPetr/flan-t5-text-classifier"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "2.2.2"
pre-commit = "3.7.0"
loguru = "0.7.2"
datasets = "2.19.1"
transformers = "4.40.1"
scikit-learn = "1.4.2"
tqdm = "4.66.4"
torch = "2.3.0"
evaluate = "0.4.2"
nltk = "3.8.1"
accelerate = "0.30.0"
tensorboardX = "2.6.2.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]
